crates/wdl-ast/tests/validation/duplicate-hints/source.errors
error: task `t` contains a duplicate hints section
   ┌─ tests/validation/duplicate-hints/source.wdl:10:5
   │
 6 │     hints {
   │     ----- first hints section is defined here
   ·
10 │     hints {
   │     ^^^^^ this hints section is a duplicate

error: workflow `w` contains a duplicate hints section
   ┌─ tests/validation/duplicate-hints/source.wdl:35:5
   │
31 │     hints {
   │     ----- first hints section is defined here
   ·
35 │     hints {
   │     ^^^^^ this hints section is a duplicate

